<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/add_one_order"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginHorizontal="20dp"
                android:text="@string/order_time"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginHorizontal="20dp"
                android:text="@string/order_address"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginHorizontal="20dp"
                android:text="@string/order_content"
                android:textSize="15sp" />

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/order_money"
            android:textSize="15sp" />

            <Button
                android:id="@+id/button_take_order"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/take_order"
                android:layout_marginHorizontal="20dp">
            </Button>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>
